MODDATAIMP-1189: Fix update of MARC bibliographic fails with "NullPointerException" (#397)
* MODDATAIMP-1189: Fix update of MARC bibliographic fails with "NullPointerException"

(cherry picked from commit 3d32588fea16bdcd36f4af56f5bfd15705677a36)